i have added he newusable design for gnw

--- a/just.html
+++ b/just.html
@@ -1724,7 +1724,7 @@
                 </div>
             </div>
             
-            <div class="section-title"></br>
+            <div class="section-title">
                 <h3>Subscribe to Our Newsletter</h3>
                 <p>Get the latest updates on programs, events, and innovation resources</p>
             </div>
@@ -1786,7 +1786,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 Powered by NovisTech. All rights reserved.</p>
+                <p>&copy; 2023 Genie New World (GNW). All rights reserved.</p>
             </div>
         </div>
     </footer>
