--- a/mainchoosen.html
+++ b/mainchoosen.html
@@ -969,7 +969,7 @@
         <div class="container">
             <nav>
                 <div class="logo" onclick="showPage('home')">
-                    <i class="fas fa-lightbulb"></i> Genie<span>NewWorld</span>
+                    <i class="fas fa-lightbulb"></i> G<span>NewWorld</span>
                 </div>
                 <div class="nav-links">
                     <a class="nav-link active" onclick="showPage('home')">Home</a>
